--- a/Property FW and wreath products/Bouts/arXiv/ends.tex
+++ b/Property FW and wreath products/Bouts/arXiv/ends.tex
@@ -239,7 +239,7 @@ There exists other characterization of the number of ends in graphs, see \cite{M
 A locally finite graph (i.e. such that every vertex has finite degree) is finite if and only if it has $0$ ends.
 
 An important fact about the number of ends of a graph, is that it is an invariant of quasi-isometry, see \cite{MR1213151}. In particular, if $G$ is a finitely generated group it is possible to speak about the number of ends of the Schreier graph $\Sch(G,H;S)$ without specifying a particular finite generating set $S$.
-By a celebrated result of Stallings \cite{Stallings1971}, the number of ends of a Cayley graph of a finitely generated group can only be $0$, $1$, $2$ or infinite (in which case it is uncountable), see Figures~\ref{Figure:CayleyOfZ} and \ref{Figure:CayleyOfZ2} for some examples.
+By a celebrated result of Hopf \cite{MR2864562}, the number of ends of a Cayley graph of a finitely generated group can only be $0$, $1$, $2$ or infinite (in which case it is uncountable), see Figures~\ref{Figure:CayleyOfZ} and \ref{Figure:CayleyOfZ2} for some examples.
 On the other hand, Schreier graphs may have any number of ends in $\mathbf N\cup\{\infty\}$, see Figure~\ref{Figure:SchreierOfF2} for an example of a graph with $4$ ends.
 In fact, every regular graph of even degree is isomorphic to a Schreier graph, \cite{MR0450121,MR1358635}. 
 
@@ -562,13 +562,6 @@ Alexander Lubotzky.
 Markus Neuhauser.
 \newblock Relative property ({T}) and related properties of wreath products.
 \newblock {\em Math. Z.}, 251(1):167--177, 2005.
-
-\bibitem{Stallings1971}
-John Stallings.
-\newblock {\em Group theory and three-dimensional manifolds}.
-\newblock Yale University Press, New Haven, Conn.-London, 1971.
-\newblock A James K. Whittemore Lecture in Mathematics given at Yale
-  University, 1969, Yale Mathematical Monographs, 4.
 
 \end{thebibliography}
 %
