--- a/Property FW and wreath products/Bouts/biblio.bib
+++ b/Property FW and wreath products/Bouts/biblio.bib
@@ -6,6 +6,25 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+@article {MR10267,
+    AUTHOR = {Hopf, Heinz},
+     TITLE = {Enden offener {R}\"{a}ume und unendliche diskontinuierliche
+              {G}ruppen},
+   JOURNAL = {Comment. Math. Helv.},
+  FJOURNAL = {Commentarii Mathematici Helvetici},
+    VOLUME = {16},
+      YEAR = {1944},
+     PAGES = {81--100},
+      ISSN = {0010-2571},
+   MRCLASS = {56.0X},
+  MRNUMBER = {10267},
+MRREVIEWER = {H. Whitney},
+       DOI = {10.1007/BF02568567},
+       URL = {https://doi.org/10.1007/BF02568567},
+}
+		
+
 @ARTICLE{LS2020,
        author = {{Leemann}, Paul-Henry and {Schneeberger}, Gr{\'e}goire},
         title = "{Property {FW} and wreath products of groups: a simple approach using Schreier graphs}",
