--- a/Property FW and wreath products/Bouts/Introduction.tex
+++ b/Property FW and wreath products/Bouts/Introduction.tex
@@ -60,8 +60,7 @@ The next section contains all the definitions as well as some examples, while Se
 %
 %\todo[inline]{Mettre ici les remerciements. Tu dois possiblement remercier la NSF. J'ai mis Alain en remerciement, je ne sais pas ce que tu en penses et si tu veux être plus spécifique.}
 \paragraph{Acknowledgment}
-The authors are thankful to A. Valette and T. Nagnibeda for comments on a previous version of this note, and to the NSF for its support
-The first author was supported by NSF Grant No. 200021\textunderscore188578.
+The authors are thankful to A. Genevois, T. Nagnibeda and A. Valette for helpful comments on a previous version of this note, and to the Swiss National Fund for Scientific Research for its support.
 % The second author thanks T. Nagnibeda for her comments and the NSF for its support.
 %
 %
