--- a/Property FW and wreath products/Bouts/ends.tex
+++ b/Property FW and wreath products/Bouts/ends.tex
@@ -48,6 +48,7 @@
 \DeclareMathOperator\Cayley{Cayl}
 \DeclareMathOperator\Sch{Sch}
 \DeclareMathOperator\stab{Stab}
+\DeclareMathOperator\ab{ab}
 %
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 \newcommand*{\field}[1]{\mathbf{#1}}
